# weyoungcityback

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  answer.py  answer_zero.py  common.py  data.py  eval.py  judge.py  local_judge.py  pyproject.toml  requirements.txt  weyoungcity.service
assets/: judge.tldr  process.tldr
problem0/: __init__.py  answer.py  answer_std.py  answer_tle.py  answer_zero.py  eval.py
problem1/: MVBench_qa.json  __init__.py  answer.py  answer_std.py
problem2/: __init__.py  answer.py  answer_std.py  answer_zero.py  evaluation.py
scripts/: increment.py  normalize.py  pack.py  to_utc.py  view_all.py  view_one.py
